tests/paczka1/small_fuzzy/41144083.err
Error in line 2: q6JO A185 55,1
Error in line 6: gEzRblRJ S564 1,8
